# path-here

./: Cargo.toml  Readme.md
.github/workflows/: publish.yml
projects/path-here/: Cargo.toml
projects/path-here/assets/: icon.ai
projects/path-here/src/: errors.rs  main.rs
projects/path-here/src/windows/: mod.rs
