[package]
name = "path-here"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Add current directory to $PATH"
repository = "https://github.com/oovm/path-here"
documentation = "https://docs.rs/path-here"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
find-target = "0.1.1"

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"


[features]
default = []
